# freebots

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1d5346e1f795_added_title_to_ai_code_gen_sessions.py  3efdb66da93e_added_triggers_for_plugins.py  46cd158bcf32_added_subscriptions.py  4e8ae1f35a67_added_ai_code_gen.py  7739ec59d86f_added_excel_block.py  9591903b1e53_init_models.py  ad9494bd8503_added_download_history.py  b643a0de2a79_added_readme_to_dialogue_templates.py  bbced90b958a_added_ai_code_gen.py  d2c66c895be5_added_payments.py
src/: main.py
src/api/: router.py
src/apps/: enums.py  router.py
src/apps/ai_code_gen/: __init__.py  dto.py  (+9 more)
src/auth/: api.py  services.py
src/blocks/: api.py  models.py  repositories.py  schemas.py  services.py  utils.py
src/code_gen/: api.py  schemas.py  services.py
src/core/: base_repository.py  config.py  consts.py  db.py  utils.py
src/dialogue_templates/: api.py  models.py  repositories.py  services.py
src/dialogues/: api.py  models.py  repositories.py  services.py
src/plugins/: api.py  models.py  repositories.py  services.py
src/projects/: api.py  models.py  repositories.py  services.py
src/statistics/: api.py  repositories.py  services.py
src/users/: api.py  models.py  repositories.py  services.py
tests/: conftest.py
tests/e2e/: test_auth.py  test_dialogues.py  test_projects.py
tests/factories/: dialogues.py  projects.py
tests/utils/: projects.py
(+171 files in other folders)
