[project]
name = "freebots"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "bcrypt>=4.3.0",
    "factory-boy>=3.3.3",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.3",
    "passlib>=1.7.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "sqlalchemy>=2.0.41",
]
